# xhelio

./: .env.example  .gitattributes  .gitignore  .mcp.json  README.md  api_server.py  config.py  config.template.json  main.py  main_direct.py  mcp_server.py  pyproject.toml  requirements.txt  start.sh  xhelio_cli.py
agent/: __init__.py  agent_registry.py  base_agent.py  context_tracker.py  control_center.py  core.py  data_extraction_agent.py  data_io_agent.py  data_ops_agent.py  delegation.py  discovery_agent.py  discovery_store.py  envoy_agent.py  eureka_agent.py  eureka_hooks.py  eureka_store.py  event_bus.py  event_feed.py  event_formatters.py  fallback_registry.py  inline_completions.py  insight_agent.py  llm_session_mixin.py  llm_utils.py  logging.py  loop_guard.py  mcp_client.py  memory.py  memory_agent.py  memory_hooks.py  memory_tools.py  minimax_mcp_client.py  mission_agent.py  model_fallback.py  observations.py  orchestrator_agent.py  permission_gate.py  pipeline_store.py  planner.py  prompts.py  (+30 more)
api/: app.py  models.py  routes.py  session_manager.py  streaming.py
config-examples/: gemini-flash.json  openrouter.json
data_ops/: __init__.py  asset_manager.py  asset_registry.py  custom_ops.py  dag.py  dag_viz.py  fetch.py  fetch_cdf.py  fetch_ppi_archive.py  http_utils.py  operations_log.py  ops_library.py  pds3_label_parser.py  pipeline.py  plotting.py  replay.py  sandbox.py  sandbox_blocklist.json  sandbox_registry.json  script_export.py  script_gen.py  store.py
docs/: capability-summary.md  mission-data-architecture.md
frontend/: index.html  package.json  vite.config.ts  (+1 more)
(+2925 files in other folders)
